[gd_scene load_steps=6 format=2]

[ext_resource path="res://multi/Lobby.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.509804, 0.572549, 0.737255, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.572549, 0.729412, 0.756863, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.572549, 0.729412, 0.756863, 0.447059 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 15.0
expand_margin_right = 15.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.654902, 0.478431, 0.796078, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 15.0
expand_margin_right = 15.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 104.0
margin_top = 72.0
margin_right = 256.0
margin_bottom = -68.0
custom_constants/separation = 50

[node name="SERVER" type="Button" parent="VBoxContainer"]
margin_right = 152.0
margin_bottom = 44.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "SERVER"
icon_align = 1

[node name="CLIENT" type="Button" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 152.0
margin_bottom = 138.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "CLIENT"
icon_align = 1

[node name="Leave" type="Button" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 152.0
margin_bottom = 232.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
disabled = true
text = "LEAVE"
icon_align = 1

[node name="STATUS" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 8.0
margin_right = -10.0
margin_bottom = 22.0
text = "OFFLINE"

[node name="STATUS2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 32.0
margin_right = -10.0
margin_bottom = 46.0
text = "ID:"

[node name="chat" type="LineEdit" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0

[node name="messanger" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -252.0
margin_right = 104.0
margin_bottom = 76.0
readonly = true

[connection signal="pressed" from="VBoxContainer/SERVER" to="." method="_on_SERVER_pressed" binds= [ true ]]
[connection signal="pressed" from="VBoxContainer/CLIENT" to="." method="_on_CLIENT_pressed" binds= [ false ]]
[connection signal="pressed" from="VBoxContainer/Leave" to="." method="_on_Leave_pressed"]
[connection signal="text_entered" from="chat" to="." method="_on_LineEdit_text_entered"]
